# Boiler2D

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Common.h  Config.cc  Config.h  Engine.cc  Engine.h  Image.cc  Image.h  Makefile  README.md  Screen.h  Sprite.h  SpriteManager.h  SpriteRenderer.h  Text.cc  Utils.h  main.cc
Engine/: Image.cc  SpriteManager.h  Text.h  Utils.h
Screen/: MenuScreen.h
include/Boiler2D/: Camera.h  Common.h  Config.h  Engine.h  Geometry.h  Image.h  Screen.h  Sprite.h  SpriteManager.h  SpriteRenderer.h  Text.h  TopDownMapRenderer.h  Utils.h
src/: CMakeLists.txt
src/Boiler2D/: CMakeLists.txt  Config.cc  Engine.cc  Geometry.cc  Image.cc  Text.cc
src/demo/: CMakeLists.txt  main.cc
src/demo/Game/: Common.h  Enemy.h  Map.h  MapFactory.h  Math.h  Object.h  Player.h  World.h
src/examples/demo1/: Bridge.h  CMakeLists.txt  main.cc
src/examples/demo1/Screen/: BridgeScreen.h  GameScreen.h  MenuScreen.h
